WIP: Refactor code for better design and tiering.